--- a/_data/pages.yml
+++ b/_data/pages.yml
@@ -1,5 +1,7 @@
 pages:
-  - {name: 'About', url: 'about.html'}
-  - {name: 'Contact', url: 'contact.html'}
+  - {name: 'AboutMe', url: 'about.html'}
+  - {name: 'Project', url: 'project.html'}
+  - {name: 'CV', url: 'https://github.com/PandaSekh/Jekyll-YAMT'}
+  - {name: 'Blog', url: 'blog.html'}
+  - {name: 'Gallery', url: 'gallery.html'}
   - {name: 'Archive', url: 'archive.html'}
-  - {name: 'Get YAMT', url: 'https://github.com/PandaSekh/Jekyll-YAMT'}
