--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: TaKeTube
 description:
-url:  "https://taketube.github.io/" # Actual base url of the website
-baseurl: "/"           # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
+url:  "https://taketube.github.io" # Actual base url of the website
+baseurl:            # url of the jekyll blog. e.g. if you set url to "mysite.com" and baseurl to "blog", the jekyll website will work on "mysite.com/blog"
 author:
   name: "TaKeTube"
   email: "zimug2@illinois.edu"
-  url: "https://taketube.github.io/"
+  url: "https://taketube.github.io"
 permalink: /:year/:month/:day/:title:output_ext
 
 #Plugins
